--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  display_picture: MyString
+  display_picture: olio.svg
   name: MyString
   rating: 1
+  external_id: 1
 
 two:
-  display_picture: MyString
+  display_picture: rating-icon.svg
   name: MyString
   rating: 1
+  external_id: 2
